--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bienvenue"
+        android:text="@string/label_welcome"
         android:textSize="50sp"
         android:textColor="@color/black"
         android:layout_marginTop="100dp"/>
