--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,36 +9,10 @@
     android:gravity="center_horizontal"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/label_welcome"
-        android:textSize="50sp"
-        android:textColor="@color/black"
-        android:layout_marginTop="100dp"/>
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:background="@color/black"
-        android:layout_marginVertical="10dp"/>
-
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:background="@drawable/bambooz_button_round"
-        android:text="@string/button_login"
-        android:textSize="15dp"
-        android:layout_marginVertical="20dp"
-        />
-    <Button
-        android:id="@+id/btn_logout"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:background="@drawable/bambooz_button_round"
-        android:text="@string/button_logout"
-        android:textSize="15dp"
-        android:layout_marginVertical="20dp"
-        />
+    </FrameLayout>
 </LinearLayout>
