--- a/app/src/main/res/layout/fragment_user_research.xml
+++ b/app/src/main/res/layout/fragment_user_research.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".UserResearch" >
+    tools:context=".Fragment.UserResearch" >
 
     <SearchView
         android:id="@+id/searchView"
