--- a/app/src/main/res/layout/logout_layout.xml
+++ b/app/src/main/res/layout/logout_layout.xml
@@ -1,16 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/firstName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:paddingStart="20dp"
+            android:text="@string/label_first_name"
+            android:textSize="20sp" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="50dp" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/lastName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="@string/label_last_name"
+            android:paddingStart="20dp"
+            android:textSize="20sp"
+            android:gravity="center_vertical"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="50dp" />
+
+    </LinearLayout>
+    <LinearLayout
         android:id="@+id/mail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/password"
-        android:layout_marginBottom="50dp"
         android:orientation="vertical">
 
         <TextView
@@ -29,8 +66,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_above="@+id/buttons"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/password">
 
@@ -50,10 +86,8 @@
 
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_marginHorizontal="50dp"
         android:layout_marginBottom="100dp"
         android:gravity="center"
@@ -61,19 +95,11 @@
         android:id="@+id/buttons">
 
         <Button
-            android:id="@+id/btn_login"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginVertical="20dp"
-            android:text="@string/button_login_action"
-            android:background="@drawable/bambooz_button_round"/>
-        <Button
             android:id="@+id/btn_logout"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="@string/button_logout"
             android:layout_marginVertical="20dp"
             android:background="@drawable/bambooz_button_round"/>
-
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
