--- a/app/src/main/res/layout/welcome_layout.xml
+++ b/app/src/main/res/layout/welcome_layout.xml
@@ -33,7 +33,7 @@
         android:layout_marginVertical="20dp"
         />
     <Button
-        android:id="@+id/btn_logout"
+        android:id="@+id/btn_signup"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:background="@drawable/bambooz_button_round"
