--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -18,6 +18,7 @@
         android:background="@drawable/ic_baseline_account_circle_24"/>
 
     <TextView
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -26,5 +27,76 @@
         android:textSize="20sp"
         android:textColor="@color/bambooz_orange"
         android:text="Mon Profile" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tvTitle"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="20dp"
+        android:orientation="vertical"
+        android:background="@drawable/bambooz_button_round">
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginVertical="20dp"
+            android:layout_marginHorizontal="20dp"
+            android:textSize="15sp"
+            android:textColor="@color/white"
+            android:text="@string/label_last_name"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/name"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="20dp"
+        android:orientation="vertical"
+        android:background="@drawable/bambooz_button_round"
+        android:backgroundTint="@color/white">
+
+        <TextView
+            android:id="@+id/points"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="20dp"
+            android:textSize="15sp"
+            android:textColor="@color/black"
+            android:drawableLeft="@drawable/ic_star"
+            android:drawableTint="@color/black"
+            android:drawablePadding="20dp"
+            android:text="150 Points"/>
+        <TextView
+            android:id="@+id/followers"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="20dp"
+            android:textSize="15sp"
+            android:textColor="@color/black"
+            android:drawableLeft="@drawable/ic_peoples"
+            android:drawableTint="@color/black"
+            android:drawablePadding="20dp"
+            android:text="30 Abonnés"/>
+
+        <TextView
+            android:id="@+id/follows"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="20dp"
+            android:textSize="15sp"
+            android:textColor="@color/black"
+            android:drawableLeft="@drawable/ic_peoples"
+            android:drawableTint="@color/black"
+            android:drawablePadding="20dp"
+            android:text="150 Abonnements"/>
+    </LinearLayout>
+
+
+    </LinearLayout>
 
 </RelativeLayout>
