--- a/app/src/main/res/layout/fragment_actu.xml
+++ b/app/src/main/res/layout/fragment_actu.xml
@@ -6,11 +6,9 @@
     android:background="@color/white"
     tools:context=".Fragment.ActuFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleViewActu"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="ACTU" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
