--- a/app/src/main/res/layout/logout_layout.xml
+++ b/app/src/main/res/layout/logout_layout.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical"
+android:background="@color/bambooz_orange">
+
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical">
+    android:layout_marginHorizontal="20dp"
+    android:layout_marginVertical="50dp"
+
+    android:background="@drawable/bambooz_button_round"
+    android:backgroundTint="@color/white">
+
 
     <LinearLayout
         android:id="@+id/firstName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_alignParentTop="true"
         android:orientation="vertical">
 
         <TextView
@@ -30,6 +40,7 @@
         android:id="@+id/lastName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/firstName"
         android:orientation="vertical">
 
         <TextView
@@ -49,6 +60,7 @@
         android:id="@+id/mail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/lastName"
         android:orientation="vertical">
 
         <TextView
@@ -69,6 +81,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_below="@+id/mail"
         android:id="@+id/password">
 
         <TextView
@@ -87,20 +100,35 @@
 
 
     <LinearLayout
+        android:id="@+id/buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/password"
         android:layout_marginHorizontal="50dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
-        android:orientation="vertical"
-        android:id="@+id/buttons">
+        android:orientation="vertical">
+
 
         <Button
             android:id="@+id/btn_logout"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="@string/button_logout"
             android:layout_marginVertical="20dp"
-            android:background="@drawable/bambooz_button_round"/>
+            android:background="@drawable/bambooz_button_round"
+            android:text="@string/button_logout" />
+
+        <TextView
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginVertical="20dp"
+            android:gravity="center"
+            android:text="@string/button_login_action" />
+
     </LinearLayout>
-</LinearLayout>
+
+
+</RelativeLayout>
+
+</RelativeLayout>
