--- a/app/src/main/res/layout/fragment_publish.xml
+++ b/app/src/main/res/layout/fragment_publish.xml
@@ -1,16 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Fragment.publishFragment">
+    android:orientation="vertical"
+    tools:context=".Fragment.PublishFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Publier" />
+        android:layout_height="200dp"
+        android:background="@color/bambooz_grey_light">
+        <ImageView
+            android:paddingVertical="10dp"
+            android:id="@+id/preview"
+            android:adjustViewBounds="true"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/ic_baseline_image_24"
+            android:backgroundTint="@color/white"
+            android:layout_weight="1"/>
+        <TextView
+            android:id="@+id/tv"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="Aucune photo ajoutée"
+            android:gravity="center"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
-</FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/takePic"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/bambooz_button_round"
+            android:backgroundTint="@color/bambooz_orange"
+            android:layout_marginHorizontal="10dp"
+            android:text="Prendre une image"/>
+
+        <Button
+            android:id="@+id/importPic"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_marginHorizontal="10dp"
+            android:background="@drawable/bambooz_button_round"
+            android:backgroundTint="@color/bambooz_orange"
+            android:layout_height="wrap_content"
+            android:text="Importer une image"/>
+    </LinearLayout>
+
+</LinearLayout>
