--- a/app/src/main/res/menu/main_menu_bottom.xml
+++ b/app/src/main/res/menu/main_menu_bottom.xml
@@ -15,7 +15,7 @@
         android:icon="@drawable/ic_baseline_search_24"/>
 
     <item
-        android:id="@+id/publishFragment"
+        android:id="@+id/PublishFragment"
         android:title=""
         android:visible="true"
         android:icon="@drawable/ic_baseline_add_circle_outline_24"/>
