--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,8 +14,8 @@
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:backgroundTint="@color/bambooz_orange"
-        android:background="@drawable/ic_baseline_account_circle_24"/>
+        android:background="@drawable/ic_baseline_account_circle_24"
+        android:backgroundTint="@color/bambooz_orange" />
 
     <TextView
         android:id="@+id/tvTitle"
@@ -33,68 +33,72 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/tvTitle"
         android:layout_alignParentBottom="true"
-        android:layout_margin="20dp"
-        android:orientation="vertical"
-        android:background="@drawable/bambooz_button_round">
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/bambooz_button_round"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="20dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="20dp"
-            android:layout_marginHorizontal="20dp"
-            android:textSize="15sp"
+            android:text="@string/label_last_name"
             android:textColor="@color/white"
-            android:text="@string/label_last_name"/>
+            android:textSize="15sp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/name"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="20dp"
-        android:orientation="vertical"
-        android:background="@drawable/bambooz_button_round"
-        android:backgroundTint="@color/white">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/name"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="20dp"
+            android:background="@drawable/bambooz_button_round"
+            android:backgroundTint="@color/white"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/points"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_marginVertical="10dp"
-            android:layout_marginHorizontal="20dp"
-            android:textSize="15sp"
-            android:textColor="@color/black"
-            android:drawableLeft="@drawable/ic_star"
-            android:drawableTint="@color/black"
-            android:drawablePadding="20dp"
-            android:text="150 Points"/>
-        <TextView
-            android:id="@+id/followers"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_marginVertical="10dp"
-            android:layout_marginHorizontal="20dp"
-            android:textSize="15sp"
-            android:textColor="@color/black"
-            android:drawableLeft="@drawable/ic_peoples"
-            android:drawableTint="@color/black"
-            android:drawablePadding="20dp"
-            android:text="30 Abonnés"/>
+            <TextView
+                android:id="@+id/points"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="10dp"
+                android:drawableLeft="@drawable/ic_star"
+                android:drawablePadding="20dp"
+                android:drawableTint="@color/black"
+                android:text="150 Points"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
-        <TextView
-            android:id="@+id/follows"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_marginVertical="10dp"
-            android:layout_marginHorizontal="20dp"
-            android:textSize="15sp"
-            android:textColor="@color/black"
-            android:drawableLeft="@drawable/ic_peoples"
-            android:drawableTint="@color/black"
-            android:drawablePadding="20dp"
-            android:text="150 Abonnements"/>
-    </LinearLayout>
+            <TextView
+                android:id="@+id/followers"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="10dp"
+                android:drawableLeft="@drawable/ic_peoples"
+                android:drawablePadding="20dp"
+                android:drawableTint="@color/black"
+                android:text="30 Abonnés"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/follows"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="10dp"
+                android:drawableLeft="@drawable/ic_peoples"
+                android:drawablePadding="20dp"
+                android:drawableTint="@color/black"
+                android:text="150 Abonnements"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
+        </LinearLayout>
 
 
     </LinearLayout>
